--- a/Ubiquitous2/Skins/Simple/ChatBoxSkin.xaml
+++ b/Ubiquitous2/Skins/Simple/ChatBoxSkin.xaml
@@ -4,7 +4,8 @@
                     xmlns:ubviewmodel="clr-namespace:UB.ViewModel"
                     xmlns:Interactivity="clr-namespace:UB.Interactivity"
                     xmlns:Converter="clr-namespace:UB.Converter"
-                    xmlns:dc="clr-namespace:Devart.Controls"            
+                    xmlns:dc="clr-namespace:Devart.Controls"         
+                    xmlns:Controls="clr-namespace:UB.Controls"
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
                     mc:Ignorable="d" 
@@ -29,20 +30,21 @@
                                             <ScrollViewer VerticalScrollBarVisibility="Visible" Focusable="False" d:DesignHeight="200" d:DesignWidth="500"  Template="{DynamicResource ScrollStyle}" CanContentScroll="True">
                                                 <i:Interaction.Triggers>
                                                     <Interactivity:DataEventTrigger EventName="MessageAdded" d:EventName="">
-                                                        <Interactivity:AutoScrollAction Duration="100" EnableAutoScroll="{Binding EnableAutoScroll}"/>
+                                                        <Interactivity:AutoScrollAction Duration="200" EnableAutoScroll="{Binding EnableAutoScroll}"/>
                                                     </Interactivity:DataEventTrigger>
                                                     <Interactivity:DataEventTrigger EventName="MessageSent" d:EventName="">
-                                                        <Interactivity:AutoScrollAction Duration="100" EnableAutoScroll="True"/>
+                                                        <Interactivity:AutoScrollAction Duration="200" EnableAutoScroll="True"/>
                                                     </Interactivity:DataEventTrigger>
                                                 </i:Interaction.Triggers>
                                                 <ItemsPresenter />
                                             </ScrollViewer>
+
                                         </Grid>
                                     </ControlTemplate>
                             </ItemsControl.Template>
                             <ItemsControl.ItemsPanel>
                                 <ItemsPanelTemplate>
-                                        <dc:SmoothPanel Margin="7,0" TrackTopMost="true" VirtualizingPanel.VirtualizationMode="Recycling" VirtualizingPanel.CacheLength="5" VirtualizingPanel.CacheLengthUnit="Page">
+                                        <dc:SmoothPanel Margin="7,0" TrackTopMost="False">
                                             <dc:SmoothPanel.Templates>
                                                 <dc:SmoothPanelTemplate ViewModel="{x:Type ubviewmodel:ChatMessageViewModel}" View="{x:Type ubview:ChatMessageView}" />
                                             </dc:SmoothPanel.Templates>
