--- a/Ubiquitous2/Skins/Main/ChatMessageSkin.xaml
+++ b/Ubiquitous2/Skins/Main/ChatMessageSkin.xaml
@@ -6,7 +6,7 @@
                     xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
                     xmlns:Interactivity="clr-namespace:UB.Interactivity"
                     xmlns:PresentationOptions="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options" 
-                    xmlns:gif="http://wpfanimatedgif.codeplex.com"
+                    xmlns:gif="clr-namespace:WpfAnimatedGif"
                     >
     <Converter:ChatMessageToInlines x:Key="textConverter" />
 
