--- a/Ubiquitous2/View/ServiceLogo.xaml
+++ b/Ubiquitous2/View/ServiceLogo.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="64" d:DesignWidth="64">
 
     <d:UserControl.DataContext>
-        <sys:String>Hitbox.tv</sys:String>
+        <sys:String>Youtube.com</sys:String>
     </d:UserControl.DataContext>
 
     <UserControl.Resources>
@@ -18,6 +18,21 @@
 
         <Style x:Key="LogoStyle" TargetType="{x:Type ContentControl}">
             <Style.Triggers>
+				
+                <DataTrigger Binding="{Binding}" Value="Youtube.com">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate>
+                                <Viewbox Stretch="Uniform">
+                                    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+										<Path Data="M33.92987,16.848348 L58.92987,29.848348 33.92987,42.848346 z M65.354439,5.472927 C65.354439,5.472927 22.389767,5.4731311 18.792685,5.4731311 13.996576,5.4731311 10.199656,5.4731311 6.6025737,9.0546131 3.5480527,12.095887 4.2042074,29.945573 4.2042074,29.945573 4.2042074,29.945573 4.2069209,50.240572 7.8013167,52.627804 10.340573,55.089132 13.798889,55.01608 18.592697,55.015558 21.74586,55.15723 61.757362,55.014445 65.354439,55.014741 68.951517,55.015037 73.747834,55.015037 78.145176,52.627744 83.340468,49.045976 82.740083,38.302761&#xD;&#xA;82.740083,29.945408 82.740083,21.588056 83.26057,11.644088 79.193157,8.6066464 74.397613,5.025456 72.549078,5.4731311 65.354439,5.472927 z M65.255139,-2.2867486 C74.276428,-1.9389795 79.281059,-3.3451675 84.539657,3.284288 90.536035,10.843854 90.134178,29.945408 90.134178,29.945408 90.134178,29.945408 90.265813,53.715578 83.041988,58.446471 77.345937,62.176823 69.551332,62.177673 65.654187,62.177768 61.757041,62.177864 23.791199,62.176435 18.792535,62.177173 13.793871,62.17791 6.8507692,62.682544 1.9287655,57.65492 -2.9932383,52.627295 -3.0711751,30.103082 -3.0711751,30.103082 -3.0711751,30.103082 -4.1923243,12.037655&#xD;&#xA;1.7516098,3.2695022 5.8904062,-2.835814 10.299324,-2.287103 18.692579,-2.2867486 26.015213,-2.2864395 59.490849,-2.2745851 65.255139,-2.2867486 z" HorizontalAlignment="Left" Height="54.022" Stretch="Fill" VerticalAlignment="Top" Width="77.805" Fill="{StaticResource FillColor}"/>
+                                    </Grid>
+                                </Viewbox>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </DataTrigger>
+
                 <DataTrigger Binding="{Binding}" Value="Hitbox.tv">
                     <Setter Property="Template">
                         <Setter.Value>
