--- a/Ubiquitous2/View/SubFollowDonationView.xaml
+++ b/Ubiquitous2/View/SubFollowDonationView.xaml
@@ -3,6 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:Interactivity="clr-namespace:UB.Interactivity"
         xmlns:ignore="http://www.ignore.com"
         xmlns:Controls="clr-namespace:UB.Controls"
         xmlns:Devart="clr-namespace:Devart.Controls"
