Twitch - user badges

--- a/Ubiquitous2/Skins/Simple/ChatMessageSkin.xaml
+++ b/Ubiquitous2/Skins/Simple/ChatMessageSkin.xaml
@@ -64,6 +64,7 @@
                                         <TextBlock Focusable="False" FontSize="{Binding AppConfig.FontSizeChannel}" Text="{Binding Message.Channel}" Margin="0" HorizontalAlignment="Left" FontWeight="Bold" VerticalAlignment="Center"/>
                                     </Hyperlink>
                                 </TextBlock>
+                                <ub:ImageStack DataContext="{Binding Message.UserBadges}"/>
                                 <TextBlock ToolTip="Right click for options" Cursor="Hand" Focusable="False" FontSize="{Binding AppConfig.FontSizeNickName}" Text="{Binding Message.FromUserName}" Margin="0,0,5,0" Foreground="#FFFFC042" HorizontalAlignment="Left" FontWeight="Bold" OverridesDefaultStyle="False" VerticalAlignment="Center">
                                     <TextBlock.ContextMenu>
                                         <ContextMenu Name="userNameMenu" Style="{DynamicResource ContextMenuStyle}">
